syntax = "proto3";

package deliveryPoint;

option go_package = "/;deliveryPoint";

service DeliveryPointService {
  rpc GetAll (GetAllRequest) returns (DeliveryPoints);
  rpc Find (FindRequest) returns (DeliveryPoints);
  rpc Add (AddRequest) returns (UUID);
  rpc Remove (RemoveRequest) returns (UUID);
  rpc Update(UpdateRequest)returns (UUID);
}

// Entities:
message DeliveryPoint {
  string id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  string city_id =4;
  string name = 5;
  string address =6;
}

message DeliveryPoints {
  uint32 pages_count = 1;
  uint32 total_items = 2;
  uint32 per_page = 3;
  repeated DeliveryPoint delivery_points = 4;
}

message GetAllRequest {
  PaginationRequest pagination =1;
}

message FindRequest {
  PaginationRequest pagination = 1;
  string  id  = 2;
  string city_id =3;
  string name = 4;
  string address =5;
}

message AddRequest {
  string city_id =1;
  string name = 2;
  string address =3;
}

message RemoveRequest {
  string delivery_point = 1;
}

message UpdateRequest{
  string name = 1;
  string address =2;
}


// Base
message UUID {
  string value = 1;
}

message Empty {
}

message Exist {
  bool value = 1;
}

message PaginationRequest {
  uint32 page = 1;
  int32 limit = 2;
  uint32 offset = 3;
}
